# ur_msgs-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.github/workflows/: ci_ros2_stable.yml
action/: FollowJointTrajectoryUntil.action  SendScript.action
debian/: changelog  control  copyright  gbp.conf  rules
msg/: FrictionModelParameters.msg
rpm/: ros-humble-ur-msgs.spec  ros-iron-ur-msgs.spec  ros-jazzy-ur-msgs.spec  ros-kilted-ur-msgs.spec  ros-lyrical-ur-msgs.spec  ros-rolling-ur-msgs.spec  template.spec
srv/: SetFrictionModelParameters.srv  SetGravity.srv  SetPayload.srv
